# EPIC-1bit2qbit

./: .gitignore  .pylintrc  README.md  test_port.py
.github/workflows/: cpp-client.yml  hardhat.yml  pylint.yml  pytest.yml
blockchain/: .env.example  hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: MessageIntegrity.sol
blockchain/scripts/: deploy.js
blockchain/test/: MessageIntegrity.deployment.test.js  MessageIntegrity.getBatch.test.js  MessageIntegrity.recordBatch.test.js  MessageIntegrity.transferOwnership.test.js
blockchain/test/helpers/: fixtures.js
client/: CMakeLists.txt  CMakePresets.json  pyproject.toml  subprocess_handler.py
client/crpyto_functions/: doubleratchet.py
client/crypto_functions/: __init__.py  dek.py  diffiehellman.py  doubleratchet.py  ratchet.py  x3dh_init.py  x3dh_state.py
client/src/: main.cpp
client/src/client/: Client.cpp  Client.h
client/src/connection/: Connection.cpp  Connection.h  TlsContext.cpp  TlsContext.h
client/src/crypto/: CryptoProxy.cpp  CryptoProxy.h
client/src/messaging/: Conversation.cpp  Conversation.h  Message.cpp  Message.h  MessageStore.cpp  MessageStore.h
client/src/models/: User.cpp  User.h
client/src/ui/: App.cpp  App.h
client/tests/: test_ratchet.py
cryptography/: doubleratchet.py  key_exchange.py  ratchet.py
docs/: PROJECT-SPEC.md  architecture.md  client-build.md  design-decisions-cryptography.md  design-decisions.md  helper-daemons.md  server-flows.md
server/: .env.example  README.md  batcher.py  config.toml  logger.py  main.py  nginx.conf  pyproject.toml  run.py  run.sh
server/api/: main.py  pyproject.toml  run.py
server/api/app/: config.py  db.py  main.py  models.py  schemas.py
server/api/app/routes/: auth.py
server/api/app/security/: passwords.py
server/api/config/: config.py
server/api/database/: db.py  models.py  schemas.py
server/api/routes/: auth.py
server/api/security/: passwords.py
server/backend/: logger.py  main.py  session.py
server/backend/auth/: credentials.py
server/backend/blockchain/: abi.json
server/backend/config/: config.py
server/backend/crypto/: password.py
server/backend/database/: db.py  models.py  schemas.py
server/backend/handlers/: __init__.py  key_bundle.py  messaging.py
server/backend/routes/: auth.py  ws.py
server/backend/schemas/: http.py  ws.py
server/blockchain/: batcher.py
server/epic_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
server/tests/: conftest.py  test_batcher.py  test_handlers.py  test_password.py  test_ws.py  ws_helpers.py
server/web-app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
server/web-app/src/: App.tsx  VerifyPage.tsx  index.css  verifier.ts
