[project]
name = "epic-client"
version = "0.1.0"
description = "1bit2qbit client — Python orchestrator + C++ connection layer (pybind11)."
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1",
    "cryptography>=43",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
