[project]
name = "epic-api-client"
version = "0.1.0"
description = "1bit2qbit client cryptographic functions"
requires-python = ">=3.11"
dependencies = [
    "doubleratchet>=1.0.0",
    "cryptography>=43",
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build*"]
