[project]
name = "epic-api"
version = "0.1.0"
description = "1bit2qbit register + login backend (FastAPI). Sibling to ../web-app (verification UI)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "cryptography>=43",
    "argon2-cffi>=23.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "web3>=7",
]

[project.scripts]
epic-api        = "server.run:main"
epic-api-initdb = "server.run:init_db"

[tool.pytest.ini_options]
pythonpath = [".", "blockchain"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
